@@ -7,14 +7,13 @@ python:
   - 2.7
 
 env:
+  - DJANGO="Django>=2.0,<2.1"
   - DJANGO="Django>=1.11,<1.12"
   - DJANGO="Django>=1.10,<1.11"
   - DJANGO="Django>=1.9,<1.10"
   - DJANGO="Django>=1.8.6,<1.9"
   - DJANGO="Django>=1.7,<1.8"
-  - DJANGO="Django>=1.6,<1.7"
-  - DJANGO="Django>=1.4,<1.5"
-  
+
 install:
   - pip install -U coverage coveralls $DJANGO
 
@@ -28,6 +27,9 @@ matrix:
 
    - python: 3.5
      env: DJANGO="Django>=1.7,<1.8"
+
+   - python: 2.7
+     env: DJANGO="Django>=2.0,<2.1"
 
 
 after_success:
